DF theme: fix flickering at tx page

--- a/apps/block_scout_web/assets/css/app.scss
+++ b/apps/block_scout_web/assets/css/app.scss
@@ -4,6 +4,10 @@ html {
   background-color: #080808;
 }
 
+body {
+  background-color: #080808;
+}
+
 /* Phoenix flash messages */
 .alert:empty {
   display: none;
